Fixed image cutting off to next slide

--- a/app/stylesheets/main.scss
+++ b/app/stylesheets/main.scss
@@ -1054,18 +1054,17 @@ p a:active {
 }
 
 #jobs_background {
-  //width: 75vw;
-  width: auto;
-  height: 100vh;
+  height:100vh;
+  width: 75vw;
   left: 0;
   top: 0;
   position: absolute;
-  overflow: hidden;
   z-index: -1;
 }
 
 #jobs_background img {
-  height: 100%;
+  width: 100%;
+  max-height:100%;
 }
 
 .jobs_inset_shadow {
